# aibusy-runtime-huggingface

./: .gitignore  README.md  pyproject.toml
src/aibusy_runtime_huggingface/: plugin.py
src/aibusy_runtime_huggingface/service/: huggingface_client.py
tests/: conftest.py  test_general.py  test_hugginface_client.py  test_instances.py
