[project]
name = "aibusy-runtime-huggingface"
version = "0.0.4"
description = "AI but symple - Huggingface Runtime Module"
authors = [
    {name = "danialcala94", email = "danielalcalavalera@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

[tool.poetry.dependencies]
# Mandatory
aibusy = { version = ">=0.0.7,<1.0.0", optional = false }
huggingface-hub = { version = ">=1.21.0,<9999.0.0", optional = false }
# Optional

[tool.poetry]
packages = [{include = "aibusy_runtime_huggingface", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
markers = [
    "mandatory: mandatory tests for release",
    "additional: exhaustive and demanding tests"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
